--- a/Innovation Project/Penver/styles/index.css
+++ b/Innovation Project/Penver/styles/index.css
@@ -36,7 +36,7 @@ body {
     justify-content: space-between;
     align-items: center;
     float: top;
-    padding: 6px;
+    padding: 12px;
 }
 
 .header a {
@@ -61,6 +61,7 @@ body {
     padding-right: 30px;
     border-right: 4px solid white;
     margin-right: 30px;
+    height: 93vh;
     float: left;
 }
 
@@ -98,6 +99,7 @@ body {
     padding-right: 30px;
     border-left: 4px solid white;
     margin-left: 30px;
+    height: 93vh;
     float: right;
 }
 
