--- a/Innovation Project/Penver/styles/login.css
+++ b/Innovation Project/Penver/styles/login.css
@@ -37,8 +37,19 @@ body {
     text-decoration: none;    
 }
 
-.sign a:hover {
+.login a:hover {
     text-decoration: underline;    
+}
+
+.login input[type=text], input[type=password], input[type=email], input[type=password_confirm]
+{
+    font-family: Rubik;
+    font-size: 16px;
+    border-radius: 6px;
+    border: 2px solid black;
+    width: 100%;
+    height: 6%;
+    padding: 5px;
 }
 
 .sign {
@@ -54,9 +65,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 128px;
-    padding-left: 256px;
-    padding-right: 256px;
+    padding: 64px;
 }
 
 .sign a {
@@ -67,25 +76,14 @@ body {
     text-decoration: underline;    
 }
 
-.sign input[type=text], input[type=password], input[type=email]
+.sign input[type=text], input[type=password], input[type=email], input[type=password_confirm]
 {
     font-family: Rubik;
     font-size: 16px;
     border-radius: 6px;
     border: 2px solid black;
     width: 100%;
-    height: 10%;
-    padding: 5px;
-}
-
-input[type=text], input[type=password], input[type=email]
-{
-    font-family: Rubik;
-    font-size: 16px;
-    border-radius: 6px;
-    border: 2px solid black;
-    width: 100%;
-    height: 15%;
+    height: 6%;
     padding: 5px;
 }
 
